--- a/python1.html
+++ b/python1.html
@@ -17,7 +17,7 @@
     </p>
     </div>
 
-    <P>!!! You can only unlock the next vedio while watching the vedio and by completing the task !!!</P>
+    <P>!!! You can only unlock the next video while watching the video and by completing the task !!!</P>
 
     <div class="task">
         <h3><u>TASK 1</u></h3>
