--- a/python1.html
+++ b/python1.html
@@ -22,7 +22,8 @@
     <div class="task">
         <h3><u>TASK 1</u></h3>
         <p>Write a program to print 'Hello World'(Share the link below)</p>
-        <input type="text">
+        <input type="text"><br>
+        <button class="submit" type="button" onclick="alert('Task completed Successfully')" disabled>Submit</button>
     </div>
 
 </body>
